--- a/Lab6_20203651/src/main/resources/templates/VistaPrincipal.html
+++ b/Lab6_20203651/src/main/resources/templates/VistaPrincipal.html
@@ -15,24 +15,8 @@
 
 </head>
 <body>
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light navbarPablo">
-    <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{'/Sitios'}"><h4>Sitios</h4></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{'/Equipos'}"><h4>Equipos</h4></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{'/Estadísticas'}"><h4>Estadísticas</h4></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<header th:insert="~{fragments/fragment_Navbar.html :: navbar}">
+
 </header>
 
 </body>
